{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 145,
  "lineage": "03abb70d-439c-d22a-a634-44ac95e60ce7",
  "resources": [
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:security-group/sg-0648d62d199042018",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0648d62d199042018",
            "ingress": [],
            "name": "worker-sg",
            "name_prefix": "",
            "owner_id": "239143558455",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "sg-0648d62d199042018",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-module",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "external-secrets-ns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "external-secrets",
            "metadata": [
              {
                "generation": 0,
                "name": "external-secrets",
                "resource_version": "21192",
                "uid": "c476ec06-3611-413a-9ed9-70ce83e7d6b3"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "external-secrets"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.eks-module.aws_eks_cluster.edu-cluster",
            "module.eks-module.aws_eks_node_group.edu-nodegroup",
            "module.eks-module.aws_iam_role.cluster-role",
            "module.eks-module.aws_iam_role.workernode-role",
            "module.eks-module.aws_iam_role_policy_attachment.cluster-eks-policy-attach",
            "module.eks-module.aws_iam_role_policy_attachment.cluster-vpc-policy-attach",
            "module.eks-module.aws_iam_role_policy_attachment.cni-policy",
            "module.eks-module.aws_iam_role_policy_attachment.ecr-policy",
            "module.eks-module.aws_iam_role_policy_attachment.worker-node-policy",
            "module.eks-module.aws_launch_template.worker-lt",
            "module.eks-module.aws_security_group.worker-sg",
            "module.vpc-module.aws_subnet.worker-private-subnet-1",
            "module.vpc-module.aws_subnet.worker-private-subnet-2",
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.rds-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:security-group/sg-0e3b7aab0e45ca4ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3b7aab0e45ca4ef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0648d62d199042018"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "239143558455",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "sg-0e3b7aab0e45ca4ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds-module",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds-sg-egress-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:security-group-rule/sgr-0801515a6dc7478af",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0801515a6dc7478af",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e3b7aab0e45ca4ef",
            "security_group_rule_id": "sgr-0801515a6dc7478af",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "sgr-0801515a6dc7478af",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.rds-module.aws_security_group.rds-sg",
            "module.vpc-module.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds-module",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds-sg-ingress-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:security-group-rule/sgr-00ec81ff4165eff93",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-00ec81ff4165eff93",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0648d62d199042018",
            "region": "us-east-1",
            "security_group_id": "sg-0e3b7aab0e45ca4ef",
            "security_group_rule_id": "sgr-00ec81ff4165eff93",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "sgr-00ec81ff4165eff93",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.eks-module.aws_security_group.worker-sg",
            "module.rds-module.aws_security_group.rds-sg",
            "module.vpc-module.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cce558036bdbc128",
            "arn": "arn:aws:ec2:us-east-1:239143558455:elastic-ip/eipalloc-0cce558036bdbc128",
            "association_id": "eipassoc-057945d9fb984c51a",
            "domain": "vpc",
            "id": "eipalloc-0cce558036bdbc128",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a7c7784bb352198d",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_ip": "10.0.1.236",
            "public_dns": "ec2-44-208-246-126.compute-1.amazonaws.com",
            "public_ip": "44.208.246.126",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:internet-gateway/igw-0ca3388f3739b7eec",
            "id": "igw-0ca3388f3739b7eec",
            "owner_id": "239143558455",
            "region": "us-east-1",
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cce558036bdbc128",
            "association_id": "eipassoc-057945d9fb984c51a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c36ca634895b1414",
            "network_interface_id": "eni-0a7c7784bb352198d",
            "private_ip": "10.0.1.236",
            "public_ip": "44.208.246.126",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02953fcf50c9b7cb2",
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_eip.nat-eip",
            "module.vpc-module.aws_internet_gateway.eks-igw",
            "module.vpc-module.aws_subnet.public-subnet-1",
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:route-table/rtb-0e65bce77a4672c4a",
            "id": "rtb-0e65bce77a4672c4a",
            "owner_id": "239143558455",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c36ca634895b1414",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "rtb-0e65bce77a4672c4a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_eip.nat-eip",
            "module.vpc-module.aws_internet_gateway.eks-igw",
            "module.vpc-module.aws_nat_gateway.eks-natgw",
            "module.vpc-module.aws_subnet.public-subnet-1",
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:route-table/rtb-087e61bbb003fa4b1",
            "id": "rtb-087e61bbb003fa4b1",
            "owner_id": "239143558455",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca3388f3739b7eec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "rtb-087e61bbb003fa4b1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.eks-igw",
            "module.vpc-module.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0441c9238e224ef45",
            "region": "us-east-1",
            "route_table_id": "rtb-087e61bbb003fa4b1",
            "subnet_id": "subnet-02953fcf50c9b7cb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.eks-igw",
            "module.vpc-module.aws_route_table.public-rt",
            "module.vpc-module.aws_subnet.public-subnet-1",
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a08fd41f7ce57c4",
            "region": "us-east-1",
            "route_table_id": "rtb-087e61bbb003fa4b1",
            "subnet_id": "subnet-02793bc28c97880e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.eks-igw",
            "module.vpc-module.aws_route_table.public-rt",
            "module.vpc-module.aws_subnet.public-subnet-2",
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-rds-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbb775b1264b8ad5",
            "region": "us-east-1",
            "route_table_id": "rtb-0e65bce77a4672c4a",
            "subnet_id": "subnet-0dc7c7957afbe3e5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_eip.nat-eip",
            "module.vpc-module.aws_internet_gateway.eks-igw",
            "module.vpc-module.aws_nat_gateway.eks-natgw",
            "module.vpc-module.aws_route_table.private-rt",
            "module.vpc-module.aws_subnet.public-subnet-1",
            "module.vpc-module.aws_subnet.rds-private-subnet-1",
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-rds-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfde2b284fc014db",
            "region": "us-east-1",
            "route_table_id": "rtb-0e65bce77a4672c4a",
            "subnet_id": "subnet-0983740f7fa37c718"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_eip.nat-eip",
            "module.vpc-module.aws_internet_gateway.eks-igw",
            "module.vpc-module.aws_nat_gateway.eks-natgw",
            "module.vpc-module.aws_route_table.private-rt",
            "module.vpc-module.aws_subnet.public-subnet-1",
            "module.vpc-module.aws_subnet.rds-private-subnet-2",
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-worker-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b5aa8c2b46c2be1",
            "region": "us-east-1",
            "route_table_id": "rtb-0e65bce77a4672c4a",
            "subnet_id": "subnet-0d9f1ca99f464292d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_eip.nat-eip",
            "module.vpc-module.aws_internet_gateway.eks-igw",
            "module.vpc-module.aws_nat_gateway.eks-natgw",
            "module.vpc-module.aws_route_table.private-rt",
            "module.vpc-module.aws_subnet.public-subnet-1",
            "module.vpc-module.aws_subnet.worker-private-subnet-1",
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-worker-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0029e6d26b68c5fdb",
            "region": "us-east-1",
            "route_table_id": "rtb-0e65bce77a4672c4a",
            "subnet_id": "subnet-05ba2c8341596f23e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-module.aws_eip.nat-eip",
            "module.vpc-module.aws_internet_gateway.eks-igw",
            "module.vpc-module.aws_nat_gateway.eks-natgw",
            "module.vpc-module.aws_route_table.private-rt",
            "module.vpc-module.aws_subnet.public-subnet-1",
            "module.vpc-module.aws_subnet.worker-private-subnet-2",
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:subnet/subnet-02953fcf50c9b7cb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02953fcf50c9b7cb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239143558455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "subnet-02953fcf50c9b7cb2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:subnet/subnet-02793bc28c97880e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02793bc28c97880e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239143558455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "subnet-02793bc28c97880e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:subnet/subnet-0dc7c7957afbe3e5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.150.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc7c7957afbe3e5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239143558455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "subnet-0dc7c7957afbe3e5c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:subnet/subnet-0983740f7fa37c718",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0983740f7fa37c718",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239143558455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "subnet-0983740f7fa37c718",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:subnet/subnet-0d9f1ca99f464292d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9f1ca99f464292d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239143558455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "subnet-0d9f1ca99f464292d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:subnet/subnet-05ba2c8341596f23e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ba2c8341596f23e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "239143558455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-07110ac4302a6c3e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "subnet-05ba2c8341596f23e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.eks-vpc",
            "module.vpc-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239143558455:vpc/vpc-07110ac4302a6c3e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06eda7ab5daff127d",
            "default_route_table_id": "rtb-0843616fea2b03dc7",
            "default_security_group_id": "sg-0416b31a16c97255b",
            "dhcp_options_id": "dopt-05bd3e4b4a4345be5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07110ac4302a6c3e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0843616fea2b03dc7",
            "owner_id": "239143558455",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "239143558455",
            "id": "vpc-07110ac4302a6c3e5",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}